syntax = "proto3";

import "insonmnia.proto";
import "marketplace.proto";

package sonm;

message BidNetwork {
    bool overlay = 1;
    bool outbound = 2;
    bool incoming = 3;
}

message BidResources{
    BidNetwork network = 1;
    map<string, uint64> benchmarks = 2;
}

message BidOrder {
    string ID = 1;

    Duration duration = 2;
    Price price = 3;
    EthAddress blacklist = 4;
    MarketIdentityLevel identity = 5;
    string tag = 6;

    BidResources resources = 7;
}

message Resources {
    // CPU core count
    uint64 cpuCores = 1;
    // RAM, in bytes
    uint64 ramBytes = 2;
    // GPU devices count
    GPUCount gpuCount = 3;
    // todo: discuss
    // storage volume, in Megabytes
    uint64 storage = 4;
    // Inbound network traffic (the higher value), in bytes
    uint64 netTrafficIn = 5;
    // Outbound network traffic (the higher value), in bytes
    uint64 netTrafficOut = 6;
    // Allowed network connections
    NetworkType networkType = 7;
    // Other properties/benchmarks. The higher means better.
    map<string, double> properties = 8;
}
